# almera-engine

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: Chess.h.54BB31B23812BCE1.idx  Handler.cpp.5E9E41CDC2FE3FB5.idx  Handler.h.398EC43F815D3C3C.idx  Handler.h.8565CB7C6AC12ED8.idx  main.cpp.C5FD0A2DF75A59F8.idx  multiply.cpp.48EBCB3B4332497C.idx  multiply.h.365E8BFD62909C22.idx  sum.cpp.10FE9026AA41D82A.idx  sum.h.095580344FBB308E.idx
app/source/: main.cpp
core/source/: Chess.h  Handler.cpp  Handler.h  Logger.cpp  Logger.h
logger/source/: Logger.cpp  Logger.h
scripts/: linux-build
